--- a/portifolio/style.css
+++ b/portifolio/style.css
@@ -3,12 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-  background-color: black;
-
+  background-color: #000;
   height: 100vh;
 }
 
@@ -26,7 +25,7 @@ body {
   padding: 10px 40px;
   font-size: 18px;
   font-weight: 600;
-  background-color: #00ff08;
+  background-color: #00bfffa9;
   border: 0;
   border-radius: 30px;
   cursor: pointer;
@@ -40,7 +39,13 @@ h2.titulo {
 }
 
 h2.titulo span {
-  color: #00ff08;
+  color: #00bfffa9;
+}
+
+button:hover,
+form .btn-enviar input:hover {
+  box-shadow: 0px 0px 8px #242424;
+  transform: scale(1.05);
 }
 
 /* ESTILOS DO CABEÇALHO */
@@ -56,13 +61,13 @@ header > .interface {
 }
 
 header a {
-  color: #7d7d7d;
+  color: #fff;
   text-decoration: none;
   display: inline-block;
   transition: 0.2s;
 }
 
-header a:hover {
+header nav.menu-desktop a:hover {
   color: #fff;
   transform: scale(1.05);
 }
@@ -71,17 +76,83 @@ header nav ul {
   list-style-type: none;
 }
 
-header nav ul li {
+header nav.menu-desktop ul li {
   padding: 0 40px;
   display: inline-block;
 }
 
 .btn-contato button:hover {
-  box-shadow: 0px 0px 8px #00ff08;
+  box-shadow: 0px 0px 8px #00bfffa9;
   transform: scale(1.05);
 }
 
+/* ESTILO DO MENU MOBILE */
+
+.btn-abrir-menu i {
+  color: #00bfffa9;
+  font-size: 40px;
+}
+
+.menu-mobile .btn-fechar {
+  padding: 20px 5%;
+}
+
+.menu-mobile .btn-fechar i {
+  color: #00bfffa9;
+  font-size: 30px;
+}
+
+.menu-mobile {
+  background-color: #000;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 99999;
+  width: 0%;
+  transition: 0.5s;
+}
+
+.menu-mobile.abrir-menu {
+  width: 70%;
+}
+
+.menu-mobile.abrir-menu ~ .overlay-menu {
+  display: block;
+}
+
+.menu-mobile nav ul {
+  text-align: right;
+}
+
+.menu-mobile nav ul li a {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 200;
+  padding: 20px 8%;
+  display: block;
+}
+
+.menu-mobile nav ul li a:hover {
+  background-color: #00bfffa9;
+  color: #000;
+}
+
+.overlay-menu {
+  background-color: #000000df;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 88888;
+  display: none;
+}
+
 /* ESTILO DO TOPO DO SITE*/
+.topo-so-site .txt-topo-site {
+  font-size: 120px;
+}
 
 section.topo-do-site {
   padding: 100px 4%;
@@ -100,12 +171,12 @@ section.topo-do.site .flex {
 }
 
 .topo-do-site h1 span {
-  color: #00ff08;
+  color: #00bfffa9;
 }
 
 .topo-do-site .txt-topo-site p {
   color: #fff;
-  margin: 40px 0;
+  margin: 20px 0;
 }
 
 .topo-do-site .img-topo-site img {
@@ -131,6 +202,7 @@ section.especialidades {
 
 section.especialidades .flex {
   gap: 60px;
+  justify-content: center;
 }
 
 .especialidades .especialidades-box {
@@ -143,16 +215,293 @@ section.especialidades .flex {
 
 .especialidades .especialidades-box:hover {
   transform: scale(1.05);
-  box-shadow: 0 0 20px #ffffff78;
+  box-shadow: 0 0 20px #242424;
 }
 
 svg {
   width: 100px;
   height: 100px;
-  color: #00ff08;
+}
+
+#css3 {
+  color: rgba(0, 153, 255, 0.829);
+}
+
+#html5 {
+  color: orangered;
+}
+
+#js {
+  color: yellow;
 }
 
 .especialidades .especialidades-box h3 {
   font-size: 28px;
   margin: 15px 0;
+}
+
+/*ESTILO DO SOBRE*/
+
+section.sobre {
+  padding: 80px 4%;
+}
+
+section.sobre .flex {
+  align-items: center;
+  gap: 60px;
+}
+
+.sobre .txt-sobre {
+  color: #fff;
+}
+
+.sobre .txt-sobre h2 {
+  font-size: 40px;
+  line-height: 40px;
+  margin-bottom: 30px;
+}
+
+.sobre .txt-sobre h2 span {
+  color: #00bfffa9;
+  display: block;
+}
+
+.sobre .txt-sobre p {
+  margin: 30px 0;
+  text-align: justify;
+}
+
+.btn-social button {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: none;
+  background-color: #00bfffa9;
+  font-size: 22px;
+  cursor: pointer;
+  margin: 0 5px;
+  transition: 0.2s;
+}
+
+/* ESTILO DO PORTFOLIO*/
+
+section.portfolio {
+  padding: 80px 4%;
+  box-shadow: 0 0 40px 10px #2424249a;
+}
+
+section.portfolio .flex {
+  justify-content: space-around;
+  margin-top: 60px;
+}
+
+.img-port {
+  width: 360px;
+  height: 460px;
+  background-color: #242424;
+  background-size: cover;
+  background-position: 100% 0%;
+  transition: 8s;
+  cursor: pointer;
+  border-radius: 40px;
+  position: relative;
+}
+
+.img-port:hover {
+  background-position: 100% 100%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000b8;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: 600;
+  color: #fff;
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.overlay:hover {
+  opacity: 1;
+}
+
+/* ESTILO DO FORMULARIO DE CONTATO*/
+
+section.formulario {
+  padding: 80px 4%;
+}
+
+form {
+  max-width: 500px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 40px;
+}
+
+form input,
+form textarea {
+  width: 100%;
+  background-color: #242424;
+  border: 0;
+  outline: 0;
+  padding: 20px 15px;
+  border-radius: 15px;
+  color: #fff;
+  font-size: 18px;
+}
+
+form textarea {
+  resize: none;
+  height: 200px;
+}
+
+form .btn-enviar {
+  margin-top: 20px;
+  text-align: center;
+}
+
+form .btn-enviar input {
+  width: 120px;
+  background-color: #00bfffa9;
+  color: #000;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+/* ESTILO DO RODAPÉ */
+
+footer {
+  box-shadow: 0 0 40px 10px #242424;
+  padding: 40px 4%;
+}
+
+footer .flex {
+  justify-content: space-between;
+}
+
+footer .line-footer {
+  padding: 20px 0;
+}
+
+.borda {
+  border-top: 2px solid #00bfffa9;
+}
+
+footer .line-footer p i {
+  color: #00bfffa9;
+  font-size: 22px;
+}
+
+footer .line-footer p a {
+  color: #fff;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 1020px) {
+  /* CLASSES GERAIS */
+
+  .flex {
+    flex-direction: column;
+  }
+
+  h2.titulo {
+    font-size: 34px;
+    line-height: 30px;
+  }
+
+  .topo-do-site .flex {
+    flex-direction: column-reverse;
+  }
+
+  /* CABEÇALHO */
+  .menu-desktop,
+  .btn-contato {
+    display: none;
+  }
+
+  /* TOPO DO SITE */
+
+  section.topo-so-site .flex {
+    gap: 40px;
+  }
+
+  section .topo-do-site {
+    padding: 20px 8%;
+  }
+
+  .topo-do-site h1 {
+    font-size: 30px;
+  }
+
+  .topo-do-site .img-topo-site img {
+    width: 100%;
+  }
+
+  /* ESPECIALIDADES */
+
+  section.especialidades {
+    padding: 40px 8%;
+  }
+
+  .especialidades .interface .especialidades-box {
+    text-align: center;
+  }
+
+  /* SOBRE */
+
+  section.sobre {
+    padding: 80px 8%;
+  }
+
+  .sobre .txt-sobre h2 {
+    font-size: 34px;
+    line-height: 35px;
+    text-align: center;
+  }
+
+  .btn-social {
+    text-align: center;
+  }
+
+  .img-sobre img {
+    width: 100%;
+  }
+
+  /* PORTFOLIO */
+
+  section.portfolio {
+    padding: 80px 8%;
+  }
+
+  .img-port {
+    width: 100%;
+    max-width: 360px;
+    margin: 0 auto;
+  }
+
+  /* RODAPÉ */
+  footer .flex {
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  footer .line-footer {
+    text-align: center;
+  }
+
+  .line-footer .btn-social {
+    margin-bottom: 15px;
+  }
 }
